--- a/KAN_Papers.ipynb
+++ b/KAN_Papers.ipynb
@@ -4,6 +4,11 @@
   "metadata": {
     "colab": {
       "provenance": [],
+       "collapsed_sections": [
+        "9FKK1vYD4D1t",
+	"e8yW6Y1P4GvS",
+	"lWAg4AMePoaD"
+      ],
       "authorship_tag": "ABX9TyMhgDL8MSOLvI1NWWU7U9tK"
     },
     "kernelspec": {
